2005-10-21  Germain Garand  <germain@ebooksfrance.org>

        * rendering/bidi.cpp (findNextLineBreak): implement needed quirk for line breaking of 
        replaced elements within table cells.
        * rendering/render_block.cpp (calcInlineMinMaxWidth): ditto.
        Bugs #93745, #72457

2005-10-20  Dawit Alemayehu <adawit@kde.org>
       * ecma/xmlhttprequest.cpp:
       -Add support for default HTTP referer header. Fixes bug# 113962.
       - Sanitize all setRequestHeader calls:
         - We now use a BANNED_HTTP_HEADERS list to filter out 
           potentially problematic headers.
         - We always call open on "get" and "post" requests set 
           through this function.
         - We sanitize any attempts to set the "referer" field.
	 
2005-10-15  Dawit Alemayehu <adawit@kde.org>
        * ecma/xmlhttprequest.cpp: Handle HTTP response headers case insensitively.
        Fix for bug 110768.

2005-10-14  Lubos Lunak <l.lunak@kde.org>

        * khtmlview.cpp: show accesskeys for all frames

2005-10-13  Allan Sandfeld Jensen <kde@carewolf.com>

        WebCore merge: correct name on IFrames

        * html/html_baseimpl.cpp: copied FrameElementImpl behavior for initializing name

2005-10-13  Allan Sandfeld Jensen <kde@carewolf.com>

        WebCore merge: blur and focus on buttons

        * html/html_formimpl.{cpp.h}: Add form and blur
        * dom/html_form.{cpp,h}: ditto
        * ecma/kjs_html.{cpp,h}: ditto

2005-10-08  Germain Garand  <germain@ebooksfrance.org>

        Port soft-hyphen support from WebCore

        * rendering/bidi.cpp (findNextLineBreak): main skipping/breaking logic

        * rendering/render_text.{cpp,h} (calcMinMaxWidth): account for soft hyphen

2005-10-08  Dawit Alemayehu <adawit@kde.org>
        * ecma/xmlhttprequest.cpp: Do not append NULL character to end of posted
        data. Fix for bug 113393.

2005-10-08  Germain Garand  <germain@ebooksfrance.org>
